Aggiornato nav.html: sostituito 'Future' con '3DMAP'

--- a/nav.html
+++ b/nav.html
@@ -1,7 +1,7 @@
 <div class="button-container">
     <a href="index.html" class="nav-button">HOME</a>
     <a href="about.html" class="nav-button">ABOUT</a>
-    <a href="future.html" class="nav-button">FUTURE</a>
+    <a href="3dmap.html" class="nav-button">3DMAP</a>
     <a href="Space_invaders.html" class="nav-button">INVADERS</a>
     <a href="podcast.html" class="nav-button">PODCAST</a>
     <a href="badge.html" class="nav-button">BADGE</a>
