Aggiornato menu di navigazione in about.html: aggiunto 3DMAP e Prompt Optimizer

--- a/about.html
+++ b/about.html
@@ -88,10 +88,12 @@
     <div class="button-container">
         <a href="index.html" class="nav-button">HOME</a>
         <a href="about.html" class="nav-button">ABOUT</a>
-        <a href="future.html" class="nav-button">FUTURE</a>
+        <a href="3dmap.html" class="nav-button">3DMAP</a>
         <a href="Space_invaders.html" class="nav-button">INVADERS</a>
         <a href="podcast.html" class="nav-button">PODCAST</a>
         <a href="badge.html" class="nav-button">BADGE</a>
+        <a href="prompt_optimizer.html" class="nav-button">PROMPT OPTIMIZER</a>
+        <a href="ask_ai.html" class="nav-button">ASK AI</a>
         <a href="contact.html" class="nav-button">CONTACT</a>
     </div>
 
